lab1/Test/L1-A-13-64.output
Error Type A at Line 5
Error Type B at Line 6
Error Type A at Line 14
Error Type A at Line 18
Error Type B at Line 22
Error Type B at Line 28
Error Type B at Line 33
Error Type B at Line 46
Error Type B at Line 48
Error Type A at Line 51
Error Type A at Line 56
