lab1/Test/L1-A-13-64.cmm
struct WKUwP3d OjL5 
;
struct gtnmvxEtayIKKIr {
  int o3WejHgb , fiz4UF0Eohv_aM = g2QRZZkbYFBdVo ;
};^
int NSvORQlN9hh4FHLu44 struct ( int _A7od ) {
  float tdu3vT [ 88080579 ] ;
  return UWCF5p9aQ82 == wHdUlCQ24IJGJB08Ko5N - EmIhncZTV8tx_lZo1l 
    * ! - ! e3mZdchLemInfKJH3l [ KoU4bB = VVr3I9fvDdrA 
    || Uv7Ylk && yrllzz4u != Rd6g ( Ae2Flab && mjzsf59lRlrBD2vlFHH 
    <= ( S3mQeYTP && _iTe59dGR > A28I4m_ / ! fNWqlAAnvjKB 
    [ NI2no && kuWUpfB >= u5 [ F41_1m0q7ECn6TYN && ! ! 
    ec6 ( zphxgiDesKhqo6QS , jRptr , LSHMoj = CPMFXVMivOVRrD6y 
    < A8DyGKV \) / 1266041295 - 34090865.93503376 . M6zpqWuSU36SAepcxUu 
    ] ] ) ) . EIDlw3jK_2E9IuvVnmF / UWw0UPDV7UsQpRX40_ 
    ] + - ! qObpK8BjfC7DEa ( ) ;
}
struct WqcaU &n5FKjQIHErH8oapr ( ) {
}
int ;
int aGkWw ( ) {
  if APG )   if ( Wz3oTRe0 )   if ( QEJw14d0NBGFsBM3 
    )   AH0lsukeHNh ;
else   if ( foNwJSGkaoHOWm52 )   if ( Hcqe2B8ebgIW 
    )   xYhXVOTxnBZ8PU_e ;
else   if ( RxTkR07wXDP )   NaNKgIpBpa93MVkQQK7q ;
else   if ( bGOcVz4AqWOUfG )   Sys7GDlZ ;
else   if ( yXRty else )   iAa ;
else {
    struct {
      int oY ;
      int xVyy1vWN ;
!=     }oTpuZ4quRqZDo_fOX_OT ;
    struct TQ0ZzqaDFqln CEQNAYuZi4KubrJoI ;
  }



else   LiEXPf58eg5rtIhBR ;


else   while ( n1_V0dxLnx9p )   fO73vPneOC ;


else   if ( S2FWDrcs ) {
&&   }

. }
struct AcL_OxF4XJYnCtauSQ YspO3J , AodgbwMUSc1STVm0 

%;
int ;
int ;
int SJ1E3iMBO84RaKZU ( int rbzOEvB7BRvdco , int s5 
  ) {
}~
